*** Core Changelog ***

2017.**.** -------------- 0.0.9
  - New -
  + New vc element Portfolio Grid (Masonry)

  - Update -
  + Update portfolio single page

2017.07.20 -------------- 0.0.8
  - New -
  + New button donate on header menu (give donations plugin)
  + New metabox option off load googleFont on page (off-googlefont: true) / Use for increase load page time

  - Update -
  + Update style header top bar

2017.07.19 -------------- 0.0.7
  - Fix -
  + Fix icon not show (vc element Featured box)

  - Issue -
  + Issue Visual Composer builder v5.2 frontend error javascript
  + Issue vc element Liquid Button Svg not apply effect on frontend builder

  - New -
  + New vc element Progress Bar Svg
  + New vc element Grid Resizable
  + New vc element Liquid Button Svg
  + New vc element Give Carousel
  + New vc element Event Carousel
  + New vc element Event element Posts Listing
  + New vc element Counter Up
  + New vc element grid builder Give (Visual Composer Grid Builder)

  - Compatible -
  + Compatible plugin "Give" (donation)
  + Compatible Visual Composer v5.1.1

  - Update -
  + Update plugin Unyson Event Helper
  + Update Give customize general settings
  + Update Vc element vc_post_grid_resizable layout gallery (add thumbnail and show media desciption)

2017.05.23 -------------- 0.0.6
* Update
  + Visual Composer ready
  + VC new elelemt: Post slider 2, Base carousel, Featured box, Pricing table
  + New function socical share post
  + Update style product gallery single page (WooCommerce 3x)
  + Add function product gallery Zoom, Slider, Lightbox (WooCommerce 3x)
  + Add background for each product_cat page (WooCommerce)
  + Add custom title for each product_cat (WooCommerce)
  + Update Css

2017.04.26 -------------- 0.0.5
* Update
  + Unyson Event Helper - plugin
  + Change footer copyright background color default (light)
  + Update WooCommerce 3.x

2017.04.03 -------------- 0.0.4
* Update style
  + Widget product Woo on the footer side bar